--- a/Mvc/Views/Admin/Subject.cshtml
+++ b/Mvc/Views/Admin/Subject.cshtml
@@ -5,13 +5,13 @@
     <div class="input-group">
         @Html.TextBoxFor(model => model.SubjectName, new {@class = "form-control"})
         <div class="input-group-append">
-            <button type="submit" class="btn btn-success">"Add"</button>
+            <button type="submit" class="btn btn-success">Add</button>
         </div>
     </div>
     @Html.ValidationSummary()
 }
 
-@*<h2> Subjects </h2>
+<h2> Subjects </h2>
 <table class="table table-striped table-bordered">
     <thead>
     <tr>
@@ -19,20 +19,20 @@
     </tr>
     </thead>
     <tbody>
-    @foreach (var activity in Model?.Subjects!)
+    @foreach (var subject in Model?.Subjects!)
     {
         <tr>
             <td>
-                @activity
+                @subject.Name
             </td>
             <td>
-                @using (var form = Html.BeginForm("SetProfessorForSubject", "Admin", FormMethod.Post))
+                @using (Html.BeginForm("SetProfessorForSubject", "Admin",FormMethod.Post))
                 {
-                    @Html.HiddenFor(model => model.)
                     <div class="input-group">
-                        @Html.TextBoxFor(model => model.EditableItem.Title, new {@class = "form-control"})
+                        @Html.Hidden("RequestModel.SubjectId", subject.Id);
+                        @Html.DropDownListFor(model => model.RequestModel.ProfessorId, Model.Professors.Select(x => new SelectListItem(x.FullName, x.Id.ToString())))
                         <div class="input-group-append">
-                            <button type="submit" class="btn btn-success">@(Model.EditableItem.Id > 0 ? "Update" : "Add")</button>
+                            <button type="submit" class="btn btn-success">Add</button>
                         </div>
                     </div>
                     @Html.ValidationSummary()
@@ -41,7 +41,7 @@
         </tr>
     }
     </tbody>
-</table>*@
+</table>
 
 
 
