added activities refactored and student view

--- a/Mvc/Views/Admin/Index.cshtml
+++ b/Mvc/Views/Admin/Index.cshtml
@@ -15,7 +15,7 @@
         <h3>Role:</h3>
         @Html.DropDownListFor(model => model.UserModel.Role, RoleListItems.Items)
         <div class="input-group-append">
-            <button type="submit" class="btn btn-success">"Add"</button>
+            <button type="submit" class="btn btn-success">Add</button>
         </div>
     </div>
     @Html.ValidationSummary()
