dded logic for rating students works and do activity by student

--- a/Mvc/Views/Professor/Index.cshtml
+++ b/Mvc/Views/Professor/Index.cshtml
@@ -1,6 +1,8 @@
 @using Domain.Enums
 @model courseWork.Models.ViewModels.ProfessorIndexViewModel
 
+<a asp-action="Activity" asp-controller="Professor">Rate Activity</a>
+
 <h2>Add group</h2>
 @using (Html.BeginForm("AddGroup", "Professor", FormMethod.Post))
 {
